# Packaging-example

./: README.md  changelog.md  pyproject.toml
.github/workflows/: main.yml
src/example_package_arghavan/: rescale.py
tests/: test_rescale.py
