# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name = "example_package_arghavan" 
version = "0.1.0" 
dependencies = ["numpy"]
dynamic = ["version"] 
[tool.hatch]
version.path = "src/example_package_arghavan/__init__.py"

[project.optional-dependencies]
test = ["pytest"]

